# judicial-candidates-mx

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
app/: __init__.py  data.py  generate_last_updated.py  routes.py
app/data/: candidatos_scjn.json  crear_candidatos_scjn.py  last_updated.json
app/templates/: acerca.html  boleta_azul.html  boleta_verde.html  detalle.html  index.html  layout.html  lista_negra.html  resumen.html
